# tapewyrm

./: .gitignore  DESIGN.md  README.md  UNLICENSE  justfile
.github/workflows/: contract.yml  firmware.yml  host.yml  package.yml
docs/: DESIGN.md
firmware/: Makefile  README  README.md  RELEASE_NOTES  Rules.mk  protocol.h
firmware/attic/: pins.txt
firmware/attic/qic_skeleton/: arbiter.c  arbiter.h  flux_capture.c  flux_capture.h  gw_stubs.h  markers.c  markers.h  transactions.c  transactions.h  verbs.c  verbs.h
firmware/blinky_test/: Makefile  blinky.ld.S
firmware/blinky_test/f1/: Makefile
firmware/inc/: board.h  cdc_acm_protocol.h  decls.h  intrinsics.h  protocol.h  testmode.h  time.h  timer.h  usb.h  util.h
firmware/qic/: arbiter.c  arbiter.h  flux_capture.c  gw_stubs.h  markers.c  markers.h  transactions.c  verbs.h
firmware/scripts/: mk_update.py  srcdir.py  stm32.ld.S  telnet.py
firmware/scripts/openocd/: f1.cfg  f7_v1.0.cfg  f7_v1.1.cfg  flash.py
firmware/src/: Makefile  blinky.c  board.c  build_info.c  console.c  cortex.c  crc.c  floppy.c  fw_update.c  main.c  string.c  target.ld.S  testmode.c  time.c  timer.c  util.c  vectors.S
firmware/src/mcu/: Makefile
firmware/src/qic/: qic.c
firmware/src/usb/: Makefile  cdc_acm.c  config.c  core.c  defs.h  hw_at32f4.c  hw_dwc_otg.c  hw_dwc_otg.h  hw_f1.c  hw_f7.c  hw_usbd.c  hw_usbd.h  hw_usbd_at32f4.c
firmware/vendor-seam/: README.md
host/: README.md  pyproject.toml
host/tapewyrm/: __init__.py  cli.py  report.py  types.py
host/tapewyrm/codec/: __init__.py  flux.py  merge.py  mfm.py  pipeline.py  place.py  qic113.py  rs.py  segment.py  volume.py
host/tapewyrm/link/: __init__.py  device.py  protocol.py  transport.py  update.py
host/tapewyrm/profiles/: colorado.toml  conner.toml  iomega.toml
host/tapewyrm/qic117/: __init__.py  commands.py  drive.py  profile.py  status.py
host/tapewyrm/rawflux/: __init__.py  container.py
host/tapewyrm/tape/: __init__.py  geometry.py  transport.py
host/tests/: test_commands.py  test_drive.py  test_geometry.py  test_link.py  test_mfm.py  test_pipeline.py  test_place.py  test_profile.py  test_protocol.py  test_qic113.py  test_rawflux.py  test_rs.py  test_segment.py  test_tape.py  test_update.py  test_volume.py
host/tests/fixtures/: __init__.py  builders.py
protocol/: generate.py  protocol.toml
tools/: clean.py  ihex.py  package.py
(+25 files in other folders)
