[project]
name = "tapewyrm"
version = "0.1.0"
description = "QIC-80 floppy-tape recovery over Greaseweazle v4.1 — host software"
readme = "README.md"
requires-python = ">=3.11"
license = "Unlicense"
authors = [{ name = "Tapewyrm contributors" }]

# Core runtime deps. The flux/PLL/MFM reuse from the `greaseweazle` host package
# and the `numpy` acceleration path are *optional extras* (see below): the codec is
# implemented in pure stdlib Python so the whole decode stack stays importable and
# fixture-testable with no hardware and no heavy wheels (DESIGN.md §6A.10, §13.6).
dependencies = [
    "click>=8.1",
    "pyserial>=3.5",
]

[project.optional-dependencies]
# Optional vectorized GF(256) path; pure-Python fallback is always present.
accel = ["numpy>=1.26"]
# NOTE: the Greaseweazle host package (`pip install greaseweazle`) provides the
# flux/PLL/MFM primitives the codec adapters can reuse. It is deliberately NOT a
# declared dependency: it isn't needed for the hardware-free decode/test path, its
# wheels lag new CPython releases, and the reuse is bench-gated anyway
# (TODO(bench), DESIGN.md §13.6 item 1). Install it manually when wiring hardware.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
# `tw` is the shipped command — the single Tapewyrm tool (capture/decode/flash);
# it deliberately does NOT reuse or require the `gw` executable (DESIGN.md §1).
# `tapewyrm` is kept as a long-form alias.
tw = "tapewyrm.cli:cli"
tapewyrm = "tapewyrm.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tapewyrm"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Generated by protocol/generate.py — its formatting is owned by the generator,
# not ruff; excluding it keeps the contract drift-check (CI) stable.
extend-exclude = ["tapewyrm/link/protocol.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]  # long lines tolerated in tables/spec comments

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true
files = ["tapewyrm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
